# clip_embeddings

./: .gitignore  check_vector.py  clip_embeddings.ipynb  expand_csv_by_images.py  fix_file_encoding.py  generate_clip_embeddings.py  get_filtered_csv_file.py  pyproject.toml  static_quatinized_clip_embeddings.ipynb  update_image_url_with_gcs.py
