[project]
name = "clip-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.0",
]
